infra/k8s-prod/kodrops-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kodrops
  labels:
    name: kodrops
