infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    # - host: kodr.xyz
    - host: 34.91.119.173.xip.io
      http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: backend-srv
              servicePort: 3000

          - path: /hello/?(.*)
            backend:
              serviceName: hello-srv
              servicePort: 3000

          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 80
